compiler/testData/diagnostics/tests/javac/LambdaNonGeneric.diag.txt
// -- Module: <m1> --

// -- Module: <m2> --

// -- Module: <m3> --
/m3.kt:24:17: error: unresolved reference: Some
    foo { some: Some, _ -> }
                ^^^^

